// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`student.resolver @Mutation addStudent should add a student and return students data 1`] = `
Object {
  "data": Object {
    "addStudent": Array [
      Object {
        "_id": "001",
        "firstName": "Bob",
        "lastName": "Boo",
      },
      Object {
        "_id": "studentId01",
        "firstName": "David",
        "lastName": "Blue",
      },
      Object {
        "_id": "Hello World",
        "firstName": "Bill",
        "lastName": "Bee",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`student.resolver @Mutation addStudent should return an error if a student is found 1`] = `
Array [
  [GraphQLError: STUDENT_EXISTS],
]
`;

exports[`student.resolver @Query getStudent should return a student if an id is found 1`] = `
Object {
  "assessments": Array [
    "Assessment",
    "Assessment-1",
  ],
  "firstName": "David",
  "lastName": "Blue",
}
`;

exports[`student.resolver @Query getStudent should return an error if a student is not found 1`] = `
Array [
  [GraphQLError: STUDENT_NOT_FOUND],
]
`;

exports[`student.resolver @Query students should return a list of students 1`] = `
Object {
  "data": Object {
    "students": Array [
      Object {
        "_id": "001",
        "firstName": "Bob",
        "lastName": "Boo",
      },
      Object {
        "_id": "studentId01",
        "firstName": "David",
        "lastName": "Blue",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
